@@ -45,14 +45,20 @@ task unpackTestJars(type: Copy){
 //    ]
 //}
 test {
+    jvmArgs += ['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
+                '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED' // required for jacoco
+    ]
     jacoco {
-        jvmArgs += ['--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        jvmArgs += ['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
                    '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.io=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
                    '--add-opens', 'java.base/java.lang=ALL-UNNAMED' // required for jacoco
-
         ]
     }
 }
